# ultramarine-settings

./: .gitignore  COPYING  meson.build  org.ultramarine.settings.json
data/: meson.build  org.ultramarine.repoman.desktop.in  org.ultramarine.settings.appdata.xml.in  org.ultramarine.settings.desktop.in  org.ultramarine.settings.gschema.xml  ultramarine_settings.gresource.xml
data/icons/: meson.build
data/ui/: AboutDialog.ui  RepoSettings.ui
po/: POTFILES  meson.build
umcfg/: main.py  meson.build  ultramarine-settings.in  window.py
